--- a/package.json
+++ b/package.json
@@ -17,17 +17,24 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cookie": "^0.7.1",
+    "framer-motion": "^11.11.1",
+    "http-proxy-middleware": "^3.0.2",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
     "next-safe-action": "^7.9.3",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
+    "@types/http-proxy-middleware": "^0.19.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
