--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^11.11.1",
     "http-proxy-middleware": "^3.0.2",
     "lucide-react": "^0.447.0",
+    "mystic-online-fe": "file:",
     "next": "14.2.14",
     "next-safe-action": "^7.9.3",
     "next-themes": "^0.3.0",
